<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="building">建设中...\n敬请期待</string>
    <string name="tab_main">首页</string>
    <string name="tab_life">生活</string>
    <string name="tab_asstant">助手</string>
    <string name="tab_mine">我的</string>
    <string name="cancle">取消</string>
    <string name="sure">确认</string>
    <string name="login_submit">登录</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="login_fail">登录失败,请检查您的用户名或密码</string>
    <string name="login_success">登录成功</string>
    <string name="net_error">网络异常</string>
    <string name="next">下一步</string>
    <string name="door_code">门店编码 :</string>
    <string name="door_name">门店名称 :</string>
    <string name="custom_source">客户来源 :</string>
    <string name="custom_la_source">客户来源</string>
    <string name="platform">团购平台 :</string>
    <string name="platform_code">团购码 :</string>
    <string name="please_vip_acount">会员账号 :</string>
    <string name="plase_platform_code">团购码 :</string>
    <string name="vip_name">会员姓名 :</string>
    <string name="card_type">卡型 :</string>
    <string name="card_number">卡号 :</string>
    <string name="time">时间 :</string>
    <string name="amount">储值金额 :</string>
    <string name="short_amount">储值</string>
    <string name="no_data">没有数据</string>
    <string name="group_promot">团购用户才可以选择平台</string>
    <string name="group_promot_code">团购顾客才可以输入此项</string>
    <string name="error_token">登录已失效</string>
    <string name="user_name">用户名</string>
    <string name="about_company">金足印象有限公司 ©版权所有</string>
    <string name="order_input">订单录入</string>
    <string name="service_items">服务项目</string>
    <string name="select_technician">选择技师</string>
    <string name="technician">技师</string>
    <string name="text_sure">确认</string>
    <string name="job_number">工号</string>
    <string name="is_hour">是否钟点</string>
    <string name="wait_time">等待时间</string>
    <string name="name">姓名</string>
    <string name="please_select_custom_sourse">请选择客户来源</string>
    <string name="please_select_time">请选择时间</string>
    <string name="minite">分钟</string>
    <string name="submit_order">提交订单</string>
    <string name="items">项目</string>
    <string name="time_long">时长</string>
    <string name="discount_price">折扣价 :</string>
    <string name="group_price">团购价 :</string>
    <string name="room_num">房间号 :</string>
    <string name="shoupai_num">手牌号 :</string>
    <string name="shoupai_la_num">手牌号</string>

    <string name="reicever_name">接待姓名 :</string>
    <string name="reicever_num">接待编码 :</string>
    <string name="xuanchuanyuan">宣传员编码 :</string>
    <string name="coupon_amount">优惠卷金额 :</string>
    <string name="bucha">是否需要补差 :</string>
    <string name="request_faild">加载失败</string>
    <string name="please_select_room">请选择房间号</string>
    <string name="please_select_shoupai">请选择手牌号</string>
    <string name="please_enter_group_price">请录入团购价</string>
    <string name="please_enter_xcrenCode">请录入宣传人编码</string>
    <string name="please_enter_youhuijia">请录入优惠卷金额</string>
    <string name="submit_order_success">提交成功</string>
    <string name="please_select_platform">请选择团购平台</string>
    <string name="please_enter_group_num">请输入团购码</string>
    <string name="order_list">当前订单</string>
    <string name="history_list">历史订单</string>
    <string name="zengzhi_fuwu">增值服务</string>
    <string name="order_channel">订单渠道</string>
    <string name="order_code">订单编号</string>
    <string name="order_hanghao">订单行号</string>
    <string name="order_date">订单日期</string>
    <string name="item_name">项目名称</string>
    <string name="item_amount">项目金额</string>
    <string name="item_during">项目时长</string>
    <string name="daodian_time">到店时间</string>
    <string name="shagnzhong_shijian">上钟时间</string>
    <string name="xiazhong_shijian">下钟时间</string>
    <string name="over_time">结束倒计时</string>
    <string name="room_la_name">钟房名称</string>
    <string name="jiesuan_beizhu">结算备注</string>
    <string name="room_name">钟房名称:</string>
    <string name="zhongfang_code">钟房编码</string>
    <string name="room_name_no">钟房名称</string>
    <string name="stay_overnight">是否留宿</string>
    <string name="vip_num">会员号</string>
    <string name="vip_title_name">会员姓名</string>
    <string name="is_settlement">是否结算</string>
    <string name="order_state">订单状态</string>
    <string name="should_pay">应收金额</string>
    <string name="actual_pay">实收</string>
    <string name="planner_no">技师编码</string>
    <string name="planner_name">技师姓名</string>
    <string name="reicever_va_num">接待编码</string>
    <string name="reicever_va_name">接待姓名</string>
    <string name="zengzhifuwu">增值服务</string>
    <string name="service_type">服务类型</string>
    <string name="acount">数量</string>
    <string name="la_amount">金额</string>
    <string name="per_price">单价</string>
    <string name="ticheng_no">提成人编号</string>
    <string name="ticheng_name">提成人姓名</string>
    <string name="reicever_la_num">接待人编号</string>
    <string name="load_empty">加载为空</string>
    <string name="load_faild">加载失败</string>
    <string name="please_enter_vip">请输入账号</string>
    <string name="bed_count">总床位数</string>
    <string name="empty_bed_count">空床位数</string>
    <string name="room_state">房间状态</string>
    <string name="floor">楼层</string>
    <string name="count_down">倒计时</string>
    <string name="free_state">空闲状态</string>
    <string name="service_room">服务房间</string>
    <string name="setting">设置</string>
    <string name="update_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="old_pwd">旧密码</string>
    <string name="please_enter_old_pwd">请输入旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="please_enter_new_pwd">请输入新密码</string>
    <string name="sure_new_pwd">确认密码</string>
    <string name="done">完成</string>
    <string name="not_equal_new_pwd">两次密码输入不一致</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="no_room">没有房间号信息，请切换项目尝试</string>
    <string name="no_shoupai">没有手牌信息，请切换项目尝试</string>
    <string name="refresh_success">刷新成功</string>
    <string name="has_un_edti_service">还有未录入的订单项目，请完成</string>
    <string name="edit">编辑</string>
    <string name="please_room">请选择房间</string>
</resources>
