<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--leftSearchText""rightSearchText"roomAdapter"jishiAdapter"-->
    <data>
        <!--

                <variable
                    name="city"
                    type="androidx.databinding.ObservableField&lt;String&gt;" />
        -->
        <variable
                name="click"
                type="com.gold.footimpression.ui.event.EventHandler"/>
        <variable
                name="leftSearchText"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>

        <variable
                name="rightSearchText"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>

        <variable
                name="roomAdapter"
                type="com.gold.footimpression.bindingadapter.CommonAdapter"/>
        <variable
                name="jishiAdapter"
                type="com.gold.footimpression.bindingadapter.CommonAdapter"/>
    </data>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">


            <EditText
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/bg_regtangle"
                    android:drawableStart="@mipmap/icon_search"
                    android:drawablePadding="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textColor="@color/title_color"
                    android:layout_weight="1"/>
            <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"

                    android:layout_marginStart="15dp">

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginEnd="15dp"
                        android:layout_toStartOf="@id/tv_search"
                        android:drawablePadding="10dp"
                        android:paddingStart="10dp"
                        android:drawableStart="@mipmap/icon_search"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:textColor="@color/title_color"
                        android:background="@drawable/bg_regtangle"/>
                <TextView
                        android:id="@+id/tv_search"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:onClick="@{click::onClickView}"
                        android:clickable="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center_vertical|end"
                        android:textColor="#ffffff"

                        android:background="@drawable/bg_green_submit"
                        android:text="@string/sure"
                        android:gravity="center"
                        android:textSize="15sp"
                />
            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="90dp"
                android:background="#D4D4D4"

        />
        <View android:layout_width="match_parent"
              android:layout_height="14dp"
              android:layout_marginTop="91dp"
              android:background="#fff2f2f2"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="105dp"
                android:background="#D4D4D4"

        />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="106dp"
                android:orientation="horizontal"
        >
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#ffffff"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/room_name"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/bed_count"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/empty_bed_count"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/room_state"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/floor"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="0.9"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/count_down"/>
                </LinearLayout>
                <com.gold.footimpression.widget.AutoRecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#ffffff"
                        app:diliver_style="2"
                        android:adapter="@{roomAdapter}"/>
            </LinearLayout>


            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="#ffffff"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/job_number"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/name"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/free_state"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/count_down"/>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:textColor="#242C40"
                            android:gravity="center"
                            android:textSize="15sp"
                            android:text="@string/service_room"/>
                </LinearLayout>
                <com.gold.footimpression.widget.AutoRecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#ffffff"
                        app:diliver_style="2"
                        android:adapter="@{jishiAdapter}"/>
            </LinearLayout>
        </LinearLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D4D4D4"
                android:layout_gravity="center_horizontal"

        />
    </FrameLayout>
</layout>
