<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
                name="click"
                type="com.gold.footimpression.ui.event.EventHandler"/>

        <variable
                name="userName"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>

        <variable
                name="pwd"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_marginTop="100dp"/>

        <EditText
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/bg_dialog_white"
                android:maxLines="1"
                android:textSize="22sp"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@={userName}"/>
        <EditText
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textSize="22sp"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/bg_dialog_white"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@={pwd}"/>

        <TextView
                android:id="@+id/tv_submit"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:textSize="25sp"
                android:onClick="@{click::onClickView}"
                android:background="@drawable/bg_login_submit"
                android:layout_marginTop="30dp"
                android:textColor="#ffffff"
                android:text="@string/login_submit"
        />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>