<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
                name="updatePwd"
                type="androidx.databinding.ObservableField&lt;Boolean&gt;"/>
        <variable
                name="oldPwd"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>
        <variable
                name="newPwd"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>
        <variable
                name="newPwd2"
                type="androidx.databinding.ObservableField&lt;String&gt;"/>


        <variable
                name="click"
                type="com.gold.footimpression.ui.event.EventHandler"/>
    </data>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F2F2F2"
            android:orientation="horizontal">

        <LinearLayout
                android:id="@+id/ll_left"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:text="@string/setting"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/text_size_20"
                    android:textColor="#242C40"
                    android:gravity="center"
            />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D4D4D4"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="14dp"
                    android:background="#D4D4D4"/>

            <TextView
                    android:id="@+id/tv_update_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColor="#242C40"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="@{click::onClickView}"
                    android:textSize="@dimen/text_size_15"
                    android:text="@string/update_pwd"
                    android:paddingStart="25dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D4D4D4"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="14dp"
                    android:background="#D4D4D4"/>
            <TextView
                    android:id="@+id/tv_log_out"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColor="#242C40"
                    android:background="#ffffff"
                    android:gravity="center"
                    android:clickable="true"
                    android:onClick="@{click::onClickView}"
                    android:textSize="@dimen/text_size_15"
                    android:text="@string/logout"
                    android:paddingStart="25dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D4D4D4"/>
        </LinearLayout>
        <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D4D4D4"/>
        <LinearLayout
                android:id="@+id/ll_right"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:visibility="@{updatePwd?View.VISIBLE:View.INVISIBLE}"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:text="@string/update_pwd"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/text_size_20"
                    android:textColor="#242C40"
                    android:gravity="center"
            />
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D4D4D4"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="14dp"
                    android:background="#D4D4D4"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:textColor="#242C40"
                    android:background="#ffffff"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:onClick="@{click::onClickView}"
                    android:textSize="@dimen/text_size_15"
                    android:text="@string/update_pwd"
                    android:paddingStart="25dp"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D4D4D4"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="14dp"
                    android:background="#D4D4D4"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <LinearLayout
                        android:layout_width="match_parent" android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:orientation="horizontal">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="55dp"
                                android:textColor="#242C40"
                                android:background="#ffffff"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_15"
                                android:text="@string/old_pwd"
                                android:paddingStart="25dp"/>
                        <EditText
                                android:id="@+id/et_old_pwd"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:textColor="#242C40"
                                android:background="#ffffff"
                                android:singleLine="true"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:gravity="start|center_vertical"
                                android:hint="@string/please_enter_old_pwd"
                                android:textColorHint="@color/gray_e2e2e2_color"
                                android:textSize="@dimen/text_size_15"
                                android:text="@={oldPwd}"
                                android:paddingStart="20dp"/>
                    </LinearLayout>

                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#D4D4D4"/>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:orientation="horizontal">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="55dp"
                                android:textColor="#242C40"
                                android:background="#ffffff"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_15"
                                android:text="@string/new_pwd"
                                android:paddingStart="25dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:textColor="#242C40"
                                android:background="#ffffff"
                                android:singleLine="true"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:gravity="start|center_vertical"
                                android:hint="@string/please_enter_new_pwd"
                                android:textColorHint="@color/gray_e2e2e2_color"
                                android:textSize="@dimen/text_size_15"
                                android:text="@={newPwd}"
                                android:paddingStart="20dp"/>
                    </LinearLayout>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#D4D4D4"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:orientation="horizontal">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="55dp"
                                android:textColor="#242C40"
                                android:background="#ffffff"
                                android:gravity="center"
                                android:textSize="@dimen/text_size_15"
                                android:text="@string/sure_new_pwd"
                                android:paddingStart="25dp"/>
                        <EditText
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:textColor="#242C40"
                                android:background="#ffffff"
                                android:singleLine="true"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:gravity="start|center_vertical"
                                android:hint="@string/please_enter_new_pwd"
                                android:textColorHint="@color/gray_e2e2e2_color"
                                android:textSize="@dimen/text_size_15"
                                android:text="@={newPwd2}"
                                android:paddingStart="20dp"/>
                    </LinearLayout>
                    <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#D4D4D4"/>


                </LinearLayout>
                <TextView
                        android:id="@+id/tv_done"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:textColor="#FFFFFF"
                        android:background="@drawable/bg_green_submit"
                        android:gravity="center"
                        android:clickable="true"
                        android:onClick="@{click::onClickView}"
                        android:layout_alignParentBottom="true"
                        android:textSize="@dimen/text_size_15"
                        android:text="@string/done"
                        android:paddingStart="25dp"/>
            </RelativeLayout>


        </LinearLayout>
    </LinearLayout>
</layout>
